manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dfd-api
  namespace: dfd
  labels:
    app: dfd
    component: api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: dfd-api-tls
spec:
  ports:
    - name: proxy
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: dfd
    component: api
